# hector_quadrotor

hector_octorotor_demo/: CMakeLists.txt  package.xml
hector_octorotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
hector_octorotor_description/: CMakeLists.txt  package.xml
hector_octorotor_description/launch/: xacrodisplay_octorotor_base.launch
hector_octorotor_description/meshes/octorotor/: octorotor_base.dae
hector_octorotor_description/meshes/octorotor/blender/: octorotor_base.blend  octorotor_base.stl
hector_octorotor_description/meshes/quadrotor/: octorotor_base.dae
hector_octorotor_description/urdf/: octorotor.gazebo.xacro  octorotor.urdf.xacro  octorotor_base.urdf.xacro  octorotor_hokuyo_utm30lx.gazebo.xacro  octorotor_hokuyo_utm30lx.urdf.xacro
hector_octorotor_gazebo/: CMakeLists.txt  package.xml
hector_octorotor_gazebo/launch/: octorotor_empty_world.launch  spawn_octorotor.launch
hector_octorotor_gazebo/urdf/: CMakeLists.txt  octorotor_aerodynamics.gazebo.xacro  octorotor_controller.gazebo.xacro  octorotor_plugins.gazebo.xacro  octorotor_plugins.gazebo.xacro.in  octorotor_propulsion.gazebo.xacro  octorotor_sensors.gazebo.xacro
hector_octorotor_interface/: CMakeLists.txt  package.xml
hector_octorotor_interface/include/hector_octorotor_interface/: handles.h  octorotor_interface.h
hector_octorotor_interface/src/: helpers.cpp  octorotor_interface.cpp
hector_octorotor_model/: CMakeLists.txt  package.xml
hector_octorotor_model/include/hector_octorotor_model/: helpers.h  octorotor_aerodynamics.h  octorotor_propulsion.h
hector_octorotor_model/src/: matlab_helpers.h  octorotor_aerodynamics.cpp  octorotor_propulsion.cpp
hector_octorotor_teleop/: CMakeLists.txt  package.xml
hector_octorotor_teleop/launch/: logitech_gamepad.launch  sony_dualshock3.launch  xbox_controller.launch
hector_octorotor_teleop/src/: octorotor_teleop.cpp
hector_quadrotor_teleop/launch/: logitech_gamepad.launch
