<package>
  <name>hector_octorotor_description</name>
  <version>0.3.5</version>
  <description>hector_quadrotor_description provides an URDF model of a quadrotor UAV.</description>
  <maintainer email="dinko.osmankovic@etf.unsa.ba">Dinko Osmankovic</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_quadrotor_model</url>
  <url type="bugtracker">https://github.com/dinkoosmankovic/hector_quadrotor/issues</url>

  <author email="dinko.osmankovic@etf.unsa.ba">Dinko Osmankovic</author>
  <author email="esefer2@etf.unsa.ba">Enela Sefer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_sensors_description</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
